# ComfyUI-CoreAI

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  __init__.py  install.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
comfyui_coreai/: __init__.py  api.py  bridge.py  catalog.py  image_utils.py  perf.py
comfyui_coreai/nodes/: __init__.py  apple_text.py  chat.py  depth.py  detection.py  embedding.py  image_gen.py  instance_seg.py  loader.py  segmentation.py  vlm.py
docs/: OPEN_QUESTIONS_RESOLVED.md
tests/: test_catalog_dropdown.py  test_mock_integration.py  test_perf.py
tools/: build_fm.sh  fm-generate  fm-generate.swift  mock_runner.py
web/extensions/: coreai_browser.js
