[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-coreai"
version = "1.0.0-dev"
description = "Apple Core AI models (Neural Engine) as ComfyUI vision nodes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/kevinqz/ComfyUI-CoreAI"

[tool.hatch.build.targets.wheel]
packages = ["comfyui_coreai"]
